# ChangeLog for net-p2p/freenet
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_rc1_p1132.ebuild, +freenet-0.7_rc2_pre1134.ebuild:
  Another upstream release

  03 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  -freenet-0.7_rc1.ebuild, +freenet-0.7_rc1_p1132.ebuild:
  New upstream release

  01 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  +freenet-0.7_rc1.ebuild, -freenet-0.7_beta_pre1130.ebuild:
  New upstream release

  30 Mar 2008; Thomas Sachau (Tommy[D]) tommy@gentoo.org
  -freenet-0.7_beta_pre1126.ebuild, +freenet-0.7_beta_pre1130.ebuild,
  +files/ext.patch, +files/wrapper.conf.patch:
  Version bump + some more splitting

  20 Mar 2008; (Tommy[D]) tommy100@gmx.de -freenet-0.7_beta_pre1123.ebuild,
  +freenet-0.7_beta_pre1126.ebuild:
  New upstream release

  13 Mar 2008; (Tommy[D]) tommy100@gmx.de -freenet-0.7_beta_pre1122.ebuild,
  +freenet-0.7_beta_pre1123.ebuild:
  New upstream release

  10 Mar 2008; (Tommy[D]) tommy100@gmx.de -freenet-0.7_beta_pre1121.ebuild,
  +freenet-0.7_beta_pre1122.ebuild:
  New upstream release

  05 Mar 2008; (Tommy[D]) tommy100@gmx.de
  -freenet-0.7_beta_pre1119-r1.ebuild, +freenet-0.7_beta_pre1121.ebuild:
  New upstream release

  03 Mar 2008; (Tommy[D]) tommy100@gmx.de -freenet-0.7_beta_pre1119.ebuild,
  +freenet-0.7_beta_pre1119-r1.ebuild:
  Changed file permissions

  02 Mar 2008; (Tommy[D]) tommy100@gmx.de -freenet-0.7_beta_pre1114.ebuild,
  +freenet-0.7_beta_pre1119.ebuild:
  New upstream release

  26 Feb 2008; (Tommy[D]) tommy100@gmx.de freenet-0.7_beta_pre1114.ebuild:
  Set right ownership for all files

  26 Feb 2008; (Tommy[D]) tommy100@gmx.de -freenet-0.7_beta_pre1112.ebuild,
  +freenet-0.7_beta_pre1114.ebuild,
  +files/freenet-libNativeThreadpath.patch,
  +files/freenet-libfec8path.patch:
  New upstream release + moved some precompiled libs into their own ebuilds
