@@ -1,8 +1,8 @@
-AUX ext.patch 5065 SHA1 f20a6ab88296ccac14539c2d9bf7eab4305d3b54
-AUX freenet 416 SHA1 796d336341796d081454ebcc45248e90fffaed91
-AUX wrapper.conf.patch 691 SHA1 e280d06f42e310cd96f207f5ffdb28ed18364425
-DIST freenet-0.7_rc2_pre1134.tar.bz2 1871620 SHA1 bda22816e2a5c66b89fac8ddb094ba404303a6a2
-DIST wrapper-20080330.conf 1667 SHA1 7f8679579c47e2c0644d26c67c26d779bf6f8d75
-EBUILD freenet-0.7_rc2_pre1134.ebuild 2228 SHA1 26b2c52d0d99058eb41ceb78451000feaf4d3986
-MISC ChangeLog 6849 SHA1 ec0a0ae6da061ae52495b8019b93f283e72f2a68
-MISC metadata.xml 170 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4
+AUX ext.patch 5065 RMD160 168a521cea56770a9551ef6554d2df57248564e8 SHA1 f20a6ab88296ccac14539c2d9bf7eab4305d3b54 SHA256 5bc08f7f7a7e22e034117a1271390c0e6e2f3103c10fed1eb6551cfeb7d77585
+AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d336341796d081454ebcc45248e90fffaed91 SHA256 d3b665e8d619d995ef9cb67ed4006c96bc4fdf80e6b7923247e022268ab8bae5
+AUX wrapper.conf.patch 691 RMD160 a4f534fb81d20972d80d16a579a5f493918149d1 SHA1 e280d06f42e310cd96f207f5ffdb28ed18364425 SHA256 354dc64eab82bbc312ac226fab56932da7d7fc085bef2a8eb0092229f112ce1d
+DIST freenet-0.7_rc2_pre1134.tar.bz2 1871620 RMD160 0fb08dcccc7d6d103c24e0f670535698ec263bf7 SHA1 bda22816e2a5c66b89fac8ddb094ba404303a6a2 SHA256 70ea2cc8c761b6f16cf8d4d2d134c484875610b7e2c6a714caa6563d12fa5b34
+DIST wrapper-20080330.conf 1667 RMD160 77c0e4d379521ce10da408dd35ec0ebb5c82f4a9 SHA1 7f8679579c47e2c0644d26c67c26d779bf6f8d75 SHA256 70a98acb43b43b00b45bda40de5745ba188d366dd69c5d97968aa4494b7441f0
+EBUILD freenet-0.7_rc2_pre1134.ebuild 2954 RMD160 44ad108a2ab3acbe3450dfe21aa2cb8ff8a1bef9 SHA1 faa33b0f9fdf7402627acc704454f747b61b1848 SHA256 ef9ab18312f3395a1deb17afc8a79bd7018f701c622ea4468365cec1e4870cfa
+MISC ChangeLog 6982 RMD160 ec4623f0361b22fe937d7baf278aaeb00ef45032 SHA1 3808cac354063c9172c99774a077548681919cd1 SHA256 1686792bf20bdff0eceda032c6ddf9461d20529ce6cd1fa1774a0252e81bb332
+MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
